[gd_scene load_steps=9 format=3 uid="uid://b1gsy3w58nksa"]

[ext_resource type="PackedScene" uid="uid://54wnwx4g0420" path="res://ui/joke.tscn" id="1_4hwai"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_mh7at"]
[ext_resource type="Script" path="res://scripts/falling_punchlines.gd" id="3_lnu6d"]
[ext_resource type="FontFile" uid="uid://n1q51ljuyy06" path="res://ui/fonts/HiMelody-Regular.ttf" id="4_mdy5c"]

[sub_resource type="Animation" id="Animation_yh5df"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Joke:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, 880)]
}

[sub_resource type="Animation" id="Animation_8aw4x"]
resource_name = "jokebox_hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Joke:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(100, 880), Vector2(100, 850), Vector2(100, 1200)]
}

[sub_resource type="Animation" id="Animation_r2nv0"]
resource_name = "jokebox_show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Joke:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(100, 1200), Vector2(100, 850), Vector2(100, 880)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l1huq"]
_data = {
"RESET": SubResource("Animation_yh5df"),
"jokebox_hide": SubResource("Animation_8aw4x"),
"jokebox_show": SubResource("Animation_r2nv0")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_mh7at")

[node name="FallingPunchlines" type="Node2D" parent="."]
script = ExtResource("3_lnu6d")

[node name="Joke" parent="." instance=ExtResource("1_4hwai")]
layout_mode = 0
offset_left = 100.0
offset_top = 880.0
offset_right = 1900.0
offset_bottom = 1060.0

[node name="TitleDelay" type="Timer" parent="."]
one_shot = true

[node name="JokeDelay" type="Timer" parent="."]
wait_time = 3.2
one_shot = true

[node name="JokeBoxAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l1huq")
}

[node name="ResultLine" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 992.0
offset_top = 224.0
offset_right = 1504.0
offset_bottom = 416.0
theme_override_colors/default_color = Color(1, 0.854902, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_mdy5c")
theme_override_font_sizes/normal_font_size = 108
bbcode_enabled = true

[node name="NotJakesJokeDelay" type="Timer" parent="."]
wait_time = 1.5

[node name="LevelHeader" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1728.0
offset_top = 128.0
offset_right = 1952.0
offset_bottom = 320.0
theme_override_colors/default_color = Color(1, 0.839216, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_mdy5c")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true

[connection signal="timeout" from="TitleDelay" to="." method="_on_title_delay_timeout"]
[connection signal="timeout" from="JokeDelay" to="FallingPunchlines" method="_on_joke_delay_timeout"]
[connection signal="timeout" from="NotJakesJokeDelay" to="FallingPunchlines" method="_on_not_jakes_joke_delay_timeout"]
